Updated openapi and webservices
